# RustShield

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  USER_GUIDE.md  release_notes.txt  rename_script.py  windows_fail.txt
.cargo/: config.toml
.github/workflows/: ci.yml
ferrumward-attacker/: Cargo.toml
ferrumward-attacker/src/: main.rs
ferrumward-bevy/: Cargo.toml
ferrumward-bevy/src/: lib.rs
ferrumward-cli/: Cargo.toml
ferrumward-cli/src/: main.rs  packer.rs
ferrumward-cli/tests/: cli_tests.rs
ferrumward-core/: Cargo.toml
ferrumward-core/docs/: string-obfuscation.md
ferrumward-core/src/: error.rs  lib.rs
ferrumward-core/src/crypto/: asset_crypto.rs  mod.rs
ferrumward-core/src/fingerprint/: file_hash.rs  hardware_id.rs  mod.rs
ferrumward-core/src/license/: keygen.rs  mod.rs  validator.rs
ferrumward-core/src/protection/: anti_debug.rs  anti_dump.rs  anti_inject.rs  anti_suspend.rs  anti_vm.rs  canary.rs  chaotic_thread.rs  checkpoint.rs  decoy_honeypot.rs  heuristic_ai.rs  hw_breakpoint.rs  integrity.rs  kinematic_anomaly.rs  mem_integrity.rs  mem_scan.rs  mod.rs  parent_process.rs  secure_storage.rs  self_check.rs  time_guard.rs  var_obfuscator.rs
ferrumward-core/tests/: brutal_tests.rs  fingerprint_tests.rs  integration_tests.rs  license_tests.rs  macro_tests.rs
ferrumward-ffi/: Cargo.toml
ferrumward-ffi/include/: ferrumward.h
ferrumward-ffi/src/: lib.rs
ferrumward-godot/: .gitignore  Cargo.toml
ferrumward-godot/src/: lib.rs
ferrumward-loader/: Cargo.toml  build.rs
ferrumward-loader/src/: main.rs
ferrumward-macros/: Cargo.toml
ferrumward-macros/src/: lib.rs
ferrumward-mock-game/: Cargo.toml
ferrumward-mock-game/src/: main.rs
integrations/unity/: FerrumWard.cs
integrations/unreal/: FerrumWard.h
rustshield-attacker/src/: main.rs
rustshield-core/src/protection/: anti_suspend.rs
rustshield-core/tests/: brutal_tests.rs
