[package]
name = "ferrumward-attacker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
libc = "0.2.186"
sysinfo.workspace = true


# 
