[package]
name = "ferrumward-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for FerrumWard — anti-piracy & game protection system"
keywords = ["anti-piracy", "game-protection", "drm", "integrity", "security"]
categories = ["game-development", "cryptography"]

[dev-dependencies]
libc = "0.2"

[dependencies]
ferrumward-macros = { path = "../ferrumward-macros", optional = true }
sha2 = "0.10"
aes-gcm = "0.10"
ed25519-dalek.workspace = true
base64 = "0.22"
sysinfo.workspace = true
machine-uid = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
thiserror = "1"
rand = "0.8"
walkdir.workspace = true
hmac = "0.12"
hkdf = "0.12"

# Optional (feature-gated)
litcrypt = { version = "0.4", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
tss-esapi = { version = "7", optional = true }

[features]
default = [
    "anti-debug",
    "anti-vm",
    "file-integrity",
    "hardware-binding",
    "license",
    "crypto",
    "checkpoint",
    "canary",
]
anti-debug = []
anti-vm = []
file-integrity = []
hardware-binding = []
license = []
crypto = []
checkpoint = []
canary = []
string-obfuscation = ["litcrypt"]
code-obfuscation = ["ferrumward-macros"]
tpm = ["tss-esapi"]
full = [
    "anti-debug",
    "anti-vm",
    "file-integrity",
    "hardware-binding",
    "license",
    "crypto",
    "checkpoint",
    "canary",
    "string-obfuscation",
    "code-obfuscation",
    "tpm",
]


# 
