[package]
name = "ferrumward-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "C FFI bindings for FerrumWard"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ferrumward-core = { path = "../ferrumward-core", features = ["full"] }


# 
