[package]
name = "ferrumward-mock-game"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ferrumward-core = { path = "../ferrumward-core", features = ["string-obfuscation"] }
ferrumward-bevy = { path = "../ferrumward-bevy" }
bevy.workspace = true
ed25519-dalek = "2.1.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("string-obfuscation"))'] }



# 
